--- a/MiniApp/templates/index.html
+++ b/MiniApp/templates/index.html
@@ -5,7 +5,7 @@
     <div class="col-md-8 col-lg-6">
         <div class="card shadow-sm">
             <div class="card-header bg-primary text-white">
-                <h1 class="h4 mb-0">Анализатор чатов</h1>
+                <h1 class="h4 mb-0">TgAssistant</h1>
             </div>
             <div class="card-body">
                 <form method="POST" action="/">
