--- a/MiniApp/templates/base.html
+++ b/MiniApp/templates/base.html
@@ -16,6 +16,7 @@
     
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
