добавить страницу результата

--- a/MiniApp/templates/main_page.html
+++ b/MiniApp/templates/main_page.html
@@ -48,7 +48,7 @@
                                 <label class="btn btn-outline-primary" for="fast">Быстрый</label>
                                 
                                 <input type="radio" class="btn-check" name="analysis_mode" id="medium" value="medium" autocomplete="off">
-                                <label class="btn btn-outline-primary" for="medium">Гибридный</label>
+                                <label class="btn btn-outline-primary" for="medium">Средний</label>
                                 
                                 <input type="radio" class="btn-check" name="analysis_mode" id="slow" value="slow" autocomplete="off">
                                 <label class="btn btn-outline-primary" for="slow">Медленный</label>
